[project]
name = "fpcv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "plotly>=6.1.2",
    "pyqt5>=5.15.11",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
]
